bug: removed content shift when scrollbar appeared

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -73,3 +73,7 @@
     @apply bg-background text-foreground;
   }
 }
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
